# zeitgeist-datasources

./: .bzrignore  MAINTAINERS  Makefile  Makefile.am  NEWS  README  TODO  configure.ac
bzr/: Makefile  Makefile.am  __init__.py  hooks.py  install.sh
chrome/: Makefile.am  content_script.js  manifest.json  zeitgeist.js
emacs/: Makefile.am  README  zeitgeist.el
eog/: Makefile  Makefile.am  README  install.sh  zeitgeist.eog-plugin  zeitgeist_plugin.py
epiphany/: Makefile  README  zeitgeist-logger.ephy-extension  zeitgeist-logger.py
firefox/: Makefile  Makefile.am  README
firefox-36-libzg/extension/: install.rdf
firefox-36-libzg/extension/components/: Makefile.am
firefox-40-libzg/extension/: chrome.manifest
firefox-40-libzg/extension/chrome/content/: zeitgeist.xul
firefox-40-libzg/extension/components/: ZeitgeistModule.cpp  zeitgeist-library.h  zeitgeist.h  zeitgeist.idl  zeitgeist.xpt
firefox-libzg/: .bzrignore  Makefile  Makefile.am  test.html
firefox-libzg/extension/: Makefile  Makefile.am  install.rdf
firefox-libzg/extension/chrome/content/: zeitgeist.xul
firefox-libzg/extension/components/: Makefile  Makefile.am  ZeitgeistComponent.cpp  ZeitgeistModule.cpp  zeitgeist.idl  zeitgeistextend.h
firefox-libzg/extension/defaults/preferences/: zeitgeist.js
firefox/extension/: install.rdf
firefox/extension/chrome/content/: event.js  module.js
firefox/src/: Makefile  chrome.manifest  install.rdf
firefox/src/chrome/content/: ff-overlay.xul  overlay.js  zeitgeist-wrapper
firefox/src/chrome/locale/en-US/: overlay.dtd  overlay.properties
firefox/src/defaults/preferences/: prefs.js
geany/: Makefile  Makefile.am
gedit/: Makefile  Makefile.am  README  install.sh  zeitgeist.gedit-plugin  zeitgeist.py  zeitgeist_plugin.py
monodevelop/: Makefile.am
npapi-plugin/: Makefile  content_script.js  manifest.json  np-zeitgeist.c  np-zeitgeist.cc  zeitgeist.js
npapi-plugin/_locales/en/: messages.json
rhythmbox/: Makefile  Makefile.am  README  __init__.py  install.sh  zeitgeist.rb-plugin
rhythmbox-libzg/: Makefile.am  rhythmbox-popular-plugin.vala  rhythmbox-recent-plugin.vala  zeitgeist-popular.rb-plugin  zeitgeist-recent.rb-plugin
rhythmbox-libzg/vapi/: rb.deps
rhythmbox-popular/: Makefile.am  rhythmbox-popular-plugin.vala
rhythmbox-popular/vapi/: rb.vapi  rhythmdb.vapi
telepathy/: AUTHORS  Makefile.am  org.freedesktop.Telepathy.Client.Zeitgeist.service  zeitgeist-telepathy-observer  zeitgeist-telepathy-observer.py
thunderbird/extension/: Makefile.am  install.rdf
thunderbird/extension/chrome/content/: event.js  module.js
tomboy/: Makefile.am  NoteHandler.cs  Zeitgeist.addin.xml  Zeitgeist.cs  Zeitgeist.mdp  ZeitgeistAddin.cs  ZeitgeistDataprovider.csproj  install.sh
totem/: Makefile  README  install.sh  zeitgeist.totem-plugin  zeitgeist_plugin.py
totem-libzg/: Makefile  Makefile.am  totem-zeitgeist-plugin.c  totem-zeitgeist-plugin.vala  zeitgeist.totem-plugin
totem-libzg/vapi/: totem.vapi
totem-recent/: Makefile.am  headers  totem-zeitgeist-plugin.vala  vapi  zg-recent.totem-plugin  zg-recent.ui
vim/: Makefile.am  zeitgeist-py3.vim  zeitgeist.vim
xchat/: Makefile.am  zeitgeist-dataprovider.c
